# BBC_AOS_Wiki

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FINAL_RELEASE_READY.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_READY_REPORT.md  SECURITY.md  approval_visibility_report.md  benchmark_results.json  chaos_engineering_report.md  cli_validation_report.md  continuous_eval_report.md  deep_blast_radius_report.md  determinism_stress_report.md  final_preproduction_validation.md  final_security_certification.md  hallucination_elimination_report.md  hallucination_validation_report.md  human_workflow_report.md  impact_analysis_report.md  implementation_plan.md  long_run_stability_report.md  loop_hardening_report.md  loop_readiness_report.json  obsidian_bridge_hardening_report.md  obsidian_validation_report.md  prompt_injection_report.md  pyproject.toml  pytest_output.txt  real_user_hardening_report.md  release_checklist_report.md  release_inventory_report.md  replay_validation_report.md  repository_pilot_report.md  runner.py  (+9 more)
Legacy_BBC/: INSTALLATION.txt  LICENSE  YAPILANLAR.md  bbc.py  bbc.sh  setup.sh
archive/release_cleanup_20260626_072543/Legacy_BBC/: .gitignore  BBC_TECHNICAL_REFERENCE_EN.md  QUICK_START.md  README.md  bbc_daemon.py  bbc_installer.py  pyproject.toml  run_bbc.py  setup.bat  setup.ps1  setup.py
archive/release_cleanup_20260626_072543/Legacy_BBC/bbc_core/: __init__.py  adapter.py  ai_integration.py  bbc_logger.py  bbc_scalar.py  change_tracker.py  cli.py  config.py  context_compiler.py  git_hooks.py  global_setup.py  hallucination_guard.py  hmpu_core.py  hmpu_engine.py  hmpu_indexer.py  hmpu_quantizer.py  http_server.py  ide_auto_config.py  ide_parser.py  impact_analyzer.py  matrix_ops.py  memory_store.py  native_adapter.py  project_hygiene.py  scan_profile.py  semantic_packer.py  state_manager.py  symbol_graph.py  telemetry.py  terminal_monitor.py
archive/release_cleanup_20260626_072543/Legacy_BBC/tests/: conftest.py  test_agent_adapter_invariants.py  test_bbc_cli_surface.py  test_math.py  test_new_modules.py  test_project_hygiene.py  test_server.py  test_telemetry.py
(+622 files in other folders)
