[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py38"
line-length = 120
exclude = [
    ".venv",
    "__pycache__",
    ".git",
    "01_Engine",
    "conductor",
]

[tool.ruff.lint]
# Sadece kritik hataları yakala — gereksiz uyarı üretme
select = [
    "E9",   # Runtime errors (SyntaxError, etc.)
    "F63",  # Invalid comparisons
    "F7",   # Syntax errors in type comments
    "F82",  # Undefined names
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
